--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,18 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+
+
+	<!-- Context Listener 등록 -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/applicationContext.xml</param-value>
+	</context-param>
+
 	<!-- 한글처리 -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
@@ -42,6 +54,8 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
+
 
 
 </web-app>
